# PiELo-MQP

./: .gitignore  CMakeLists.txt  README.md  argoslog
Parser/: IDEAS.TXT  Makefile  assembly.txt  code.txt  codegen.cpp  codegen.h  functions.txt  iftest.txt  main.cpp  parser  parser.cpp  parser.h  program.txt  run  tmp_1  tmp_2  tokenizer.cpp  tokenizer.h  whiletest.txt
Parser/testPrograms/: argostest.txt  closure.txt  stigtest.txt
Pippo:VM/: lexer.cpp  stack-vm
Playground/Emma/Networking/: Makefile  combined  combined.cpp  listener  listener.cpp  sender  sender.cpp  server.cpp  showip  showip.cpp
Playground/Emma/VM/: Makefile  basic_function.txt  design.md  in.txt  instructions.cpp  instructions.h  label_test.txt  parser.cpp  parser.h  very_basic.txt  vm  vm.cpp  vm.h
Playground/Lorenzo/Networking/: client  client.cpp  router  router.cpp
Playground/Lorenzo/VM/: opcodes.cpp  opcodes.h  types.h  vm  vm.cpp
Playground/Pippo/: exceptions.h  main.cpp  test.sasm
Playground/Pippo/Networking/BrodcastUDP/: receiver.cpp  sender.cpp
Playground/Pippo/VM/: exceptions.h  lexer.cpp  main.cpp  makefile  stack-vm  stack-vm.cpp  stack-vm.h  test.sasm
Playground/Pippo/VM/VM/: lexer.h
VM/: CMakeLists.txt  Makefile  closureInstructions.cpp  closureInstructions.h  closure_test.txt  exceptions.h  gc.cpp  gc.h  inputtest.txt  instructionHandler.cpp  instructionHandler.h  instructions.cpp  instructions.h  main.cpp  networking.cpp  networking.h  parser.cpp  parser.h  pieloController.h  robotFunctions.cpp  robotFunctions.h  router  router.cpp  vm.cpp  vm.h
VM/argos/: CMakeLists.txt  pieloController.cpp  pieloController.h  pieloControllerKheperaIV.cpp  pieloControllerKheperaIV.h  pieloControllerKheperaIVDiffusion.cpp  pieloControllerKheperaIVDiffusion.h  pieloExperiment.argos
VM/instructions/: CMakeLists.txt  arithmetic.cpp  arithmetic.h  closureInstructions.cpp  closureInstructions.h  comparisonJumps.cpp  comparisonJumps.h  simpleInstructions.cpp  simpleInstructions.h  stigmergy.cpp  stigmergy.h  storeLoad.cpp  storeLoad.h
VM/testPrograms/: anonClosure.txt  barrier.txt  basicRegistration.txt  closure_test.txt  gctest.txt  inputtest.txt  logicTest.txt  robotMovement.txt  simple_closure_test.txt  stigMath.txt  stigMath2.txt  stigsize.txt  updater.txt  waiter.txt
VM/testPrograms/argos/: basicDriveForABit.txt
docs/: barrier-test.html  barrier-test.md  driving-robot.html  driving-robot.md  index.html
